# Comp8051Project

./: .gitignore  CMakeLists.txt  Design Doc.docx  build.sh  readme.md
assets/maps/: Grass.tsx  Road.tsx  level-1.tmx  level-2.tmx  test.tmx
src/: Game.cpp  Game.h  main.cpp  main.h  map.cpp  map.h
src/ecs/: Component.h  ComponentType.h  Entity.h  World.h
src/ecs/event/: BaseEvent.h  EventManager.h
src/ecs/system/: AnimationClip.h  AnimationSystem.h  CameraSystem.h  CleanupSystem.cpp  CleanupSystem.h  CollisionSystem.cpp  CollisionSystem.h  DestructionSystem.h  EventResponseSystem.cpp  EventResponseSystem.h  KeyboardInputSystem.h  MainMenuSystem.cpp  MainMenuSystem.h  MovementSystem.h  RenderSystem.h  RotationSystem.cpp  RotationSystem.h  UIRenderSystem.h
src/manager/: AssetManager.cpp  AssetManager.h  SceneManager.h  TextureManager.cpp  TextureManager.h
src/scene/: Scene.cpp  Scene.h  SceneType.h
src/utils/: Collision.cpp  Collision.h  RenderUtils.h  Vector2D.cpp  Vector2D.h
